--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Panda Commerce</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!--custom css-->
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg fixed-top bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#"> <img src="images/logo.png" alt=""
                         class="d-inline-block align-text-top">
@@ -27,7 +29,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">BackPack</a>
@@ -110,8 +112,8 @@
     <main>
         <!--categories start-->
         <section>
-            <div class="container text-center my-5">
-                <div class="row g-2">
+            <div class="container text-center my-5 categories">
+                <div class="row g-4">
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div
                             class="p-3 border rounded-3 bg-warning text-white d-flex align-items-center justify-content-around">
@@ -140,7 +142,7 @@
         <!--categories end-->
 
         <!--Shoes Section Start-->
-        <section class="container my-5">
+        <section id="shoes" class="container my-5">
             <h1>Shoes</h1>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -188,7 +190,28 @@
         </section>
         <!--Shoes Section end-->
 
+        <!--subscribe start-->
+        <section style="height: 300px;"
+            class="container rounded-3 bg-info d-flex justify-content-center align-items-center">
+            <div>
+                <h2>Card title</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, sed.</p>
+                <form>
+                    <div class="mb-3">
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+        </section>
+        <!--subscribe end-->
+
     </main>
+
+    <footer class="mt-5 text-center">
+        <p><small>Lorem ipsum dolor sit amet.</small></p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
